<resources>
    <string name="app_name">Exit Chrome</string>
    <string name="status_idle">Reading managed configuration...</string>
    <string name="restriction_missing">Managed config key mdm_device_id not set.</string>
    <string name="restriction_found">Managed config mdm_device_id: %1$s</string>
    <string name="restrictions_not_available">RestrictionsManager not available on this device.</string>
    <string name="android_id_label">MDM Device ID</string>
    <string name="device_id_label">Echo</string>
    <string name="retry_button">Read again</string>
    <string name="debug_label">Debug</string>
    <string name="restriction_title_mdm_device_id">Scalefusion Device ID</string>
    <string name="restriction_desc_mdm_device_id">The unique ID injected by Scalefusion</string>
    <string name="restriction_title_aws_endpoint_url">AWS Lambda URL</string>
    <string name="restriction_desc_aws_endpoint_url">HTTPS endpoint for your Lambda/API Gateway</string>
    <string name="restriction_title_aws_api_key">AWS API Key (APP_AWS_AUTH)</string>
    <string name="restriction_desc_aws_api_key">The secret key to authorize calls to AWS Lambda</string>
    <string name="wipe_button">Send wipe to AWS</string>
</resources>