<?xml version="1.0" encoding="utf-8"?>
<restrictions xmlns:android="http://schemas.android.com/apk/res/android">

    <restriction
        android:key="mdm_device_id"
        android:title="@string/restriction_title_mdm_device_id"
        android:restrictionType="string"
        android:defaultValue="" />

    <restriction
        android:key="aws_endpoint_url"
        android:title="@string/restriction_title_aws_endpoint_url"
        android:restrictionType="string"
        android:description="@string/restriction_desc_aws_endpoint_url"
        android:defaultValue="" />

    <restriction
        android:key="aws_api_key"
        android:title="@string/restriction_title_aws_api_key"
        android:restrictionType="string"
        android:description="@string/restriction_desc_aws_api_key"
        android:defaultValue="" />

</restrictions>